# hackhathone-2-phase-5

./: .gitignore  AUTHENTICATION.md  CHECKLIST.md  CONSTITUTION.md  DOCKER_BUILD_GUIDE.md  DOCKER_INSTRUCTIONS.md  Dockerfile  README.md  build-images.sh  complete_test.js  dapr-components.yaml  debug_constitution.js  docker-compose.cloud.yaml  docker-compose.phase5.yaml  docker-compose.yml  k8s-deployment.yaml  kafka-deployment.yaml  oracle-deployment-guide.md  package-lock.json  package.json  plan.md  skills_implementation.js  spec.md  start-containers.bat  tasks.md  temp_backend_runner.py  test_constitution.js  test_login_functionality.py  todo_tasks.txt
Phase4/: create_admin_user.py  docker-compose.yml  next.config.js  test_auth_system.py
app/: layout.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  entrypoint.sh  gunicorn.conf.py  pytest.ini  requirements.txt  test_installation.py  todo_chatbot.db
backend-agentic/: README.md
docker/: backend.Dockerfile  event-processor.Dockerfile  frontend.Dockerfile
event-processor/: entrypoint.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vercel.json
phase-5-final/: build-images.bat  demonstrate_skills.js  skills_implementation_fixed.js  start-containers.sh  todo_list.txt
phase-5-final/backend-agentic/: pyproject.toml  test_backend.py  todo_chatbot.db
phase-5-final/backend-agentic/app/api/: auth.py  chat_api.py
phase-5-final/backend-agentic/app/mcp/: tasks.py
phase-5-final/backend-agentic/app/models/: conversation.py  user.py
scripts/: k8s-setup.sh
(+310 files in other folders)
